プロフィール画像更新

--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -203,17 +203,17 @@
 		<form action="/insert" method="post" enctype="multipart/form-data"
 			th:object="${koalaInsertForm}"
 			onsubmit="return validateSubmit(this);">
-			<input th:unless="*{koala_id}==0" type="hidden"
-				th:field="*{koala_id}">
+			<input th:unless="*{koala_id}==0" type="hidden" th:field="*{koala_id}">
 
-				<div>
+				<input type="hidden" th:field="*{fileExtension}">
+				
 				プロフィール写真：<br> <span 
-					th:object="${koalaProfileImage}" th:id="*{koalaProfileImage_id} + *{filetype}" th:unless="${#strings.isEmpty(koalaProfileImage)}" style="display: inline-block">
-				<div>
+					th:id="${koalaInsertForm.koala_id} + ${koalaInsertForm.fileExtension}" 
+					th:if="${koalaInsertForm.fileExtension}" style="display: inline-block">
 						<img
-							th:src="@{{cloudinaryImageUrl}{koala_id}/profile/{fileName}(cloudinaryImageUrl = ${cloudinaryImageUrl},koala_id=${koalaInsertForm.koala_id},fileName=*{koalaProfileImage_id} + *{filetype})}"
+							th:src="@{{cloudinaryImageUrl}{koala_id}/profile/{fileName}(cloudinaryImageUrl = ${cloudinaryImageUrl}, koala_id=${koalaInsertForm.koala_id}, fileName=${koalaInsertForm.koala_id} + ${koalaInsertForm.fileExtension})}"
 							width="200" height="200">
-					</div>
+	
 					<button class="btn btn-danger btn-sm deleteImageButton"
 						type="button">削除</button>
 				</span>
