--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
 				</div>
 
 				<div class="discription">
-					<p>コアラのことがもっと好きになるデータベース</p>
+					<p>コアラdtmujdytm,y,mikdy,yのことがもっと好きになるデータベース</p>
 				</div>
 
 			</div>
