--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,23 +41,20 @@
 </head>
 
 <body>
+<div th:replace="~{block/header_boot::headerA_boot}"></div>
 	<!-- Masthead-->
 	<header class="masthead">
-		<div th:replace="~{block/header_boot::headerA_boot}"></div>
-		
-		<div class="container-fluid search">
+		<div class="search">
 			<a th:href="@{/search}"></a>
 
-			<div class="row align-items-center text-center">
-				<div class="p-2"></div>
-
-				<div class="image">
+			<div class="align-items-center text-center">
+				<div class="logo">
 					<img src="images/title.png" alt="title"
 						class="img-responsive center-block">
 				</div>
 
 				<div class="discription">
-					<p>コアラdtmujdytm,y,mikdy,yのことがもっと好きになるデータベース</p>
+					<p>コアラのことがもっと好きになるデータベース</p>
 				</div>
 
 			</div>
