--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,10 +47,9 @@
 		<div class="search">
 			<a th:href="@{/search}"></a>
 
-			<div class="align-items-center text-center">
+			<div class="masthead_content">
 				<div class="logo">
-					<img src="images/title.png" alt="title"
-						class="img-responsive center-block">
+					<img src="images/title.png" alt="title">
 				</div>
 
 				<div class="discription">
