--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -7,85 +7,96 @@
 <link href="/css/familytree.css" rel="stylesheet">
 <script src="js/familytree.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
-
 <body>
-	<div id="graph">
-		<script type="text/javascript">
-			
-		</script>
+<p id="p1"></p>
+<p id="p2"></p>
+<p id="p3"></p>
+<p id="p4"></p>
+<p id="p5"></p>
+<p id="p6"></p>
+<p id="p7"></p>
 		
-		<script type="text/javascript">
-			var margin = {top : 10, right : 10, bottom : 10, left : 10}, 
-				   width = 1200, 
-				   height = 600;
-			var kx = function(d) {return d.x - 20;};
-			var ky = function(d) {return d.y - 10;};
-			
+<div id="graph">	
+<script type="text/javascript" th:inline="javascript">
+	/*<![CDATA[*/
+		var requestParam = /*[[${id}]]*/ null;
+		/*]]>*/	
+	
+	$.getJSON("http://localhost:8080/familytreeKoala", {id : requestParam}, function(json, textStatus, jqXHR){
+		$("#p1").text(json);/*  テスト用出力*/
+		$("#p2").text(JSON.stringify(json));/*  テスト用出力*/
+		$("#p3").text(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],1));/*  テスト用出力*/
+		$("#p4").text(JSON.parse(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],1))); /*  テスト用出力*/
+		$("#p5").text(JSON.stringify(json.relationForTree));/*  テスト用出力*/
+		$("#p6").text(JSON.stringify([JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))])); /*  テスト用出力*/
+
+		var margin = {
+				top : 10,
+				right : 10,
+				bottom : 10,
+				left : 10
+			}, width = 1200, height = 600;
+			var kx = function(d) {
+				return d.x - 20;
+			};
+			var ky = function(d) {
+				return d.y - 10;
+			};
+
 			//thie place the text x axis adjust this to center align the text
-			var tx = function(d) {return d.x - 3;};
+			var tx = function(d) {
+				return d.x - 3;
+			};
 			//thie place the text y axis adjust this to center align the text
-			var ty = function(d) {return d.y + 3;};
-			
+			var ty = function(d) {
+				return d.y + 3;
+			};
+
 			//make an SVG
 			var svg = d3.select("#graph").append("svg").attr("width",
 					width + margin.left + margin.right).attr("height",
 					height + margin.top + margin.bottom).append("g").attr(
-					"transform", "translate(" + margin.left + "," + margin.top + ")");
+					"transform",
+					"translate(" + margin.left + "," + margin.top + ")");
 
 			//My JSON note the no_parent: true this ensures that the node will not be linked to its parent
 			//hidden: true ensures that the nodes is not visible.
-			var root = 
-					{name : "1", id : 1, hidden : true,no_parent : true,
-					children : [ {name : "16" ,id : 16,no_parent : true}, 
-										{name : "2", id : 2, no_parent : true,hidden : true,
-											children : [ {name : "12", id : 12,}, 
-																{name : "13", id : 13, no_parent : true}, 
-																{name : "3",id : 3, no_parent:true}, 
-																{name : "4", id : 4, hidden : true, no_parent : true, 
-																	children : [ {name : "5",id : 5,}, 
-																					   {name : "14", id : 14, hidden : true, no_parent : true, 
-																							children : [ {name : "15",id : 15,} ]}, 
-																					   {name : "6",id : 6,} ]
-																}, 
-																{name : "11",id : 11}, 
-																{name:"", hidden:true, no_parent:true,
-																	children:[{name:"bbb", id:21}]},
-																{name : "aaa",id:"20", no_parent:true},
-																{name : "7",id : 7,
-																	children : [ {name : "8",id : 8,}, 
-																					   {name : "9",id : 9,} ]},
-																]
-											}, 
-										{name : "10",id : 10,no_parent : true,
-												children : []} 
-										]
-					}
 
+			var root =  JSON.parse(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],10));
 			var allNodes = flatten(root);
+			
 			//This maps the siblings together mapping uses the ID using the blue line
 			/* オブジェクト間のリンク */
-			var siblings = [ 
-				{source : {id : 3,name : "3"},target : {id : 11,name : "11"}}, 
-				{source : {id : 12,name : "12"},target : {id : 13,name : "13"}}, 
-				{source : {id : 5,name : "5"},target : {id : 6,name : "6"}}, 
-				{source : {id : 20},target : {id : 11}},
-				{source : {id : 16},target : {id : 10}} ];
+			var siblings = [JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))];
 
 			// Compute the layout.
-			var tree = d3.layout.tree().size([ width, height ]), nodes = tree.nodes(root), links = tree.links(nodes);
+			var tree = d3.layout.tree().size([ width, height ]), nodes = tree
+					.nodes(root), links = tree.links(nodes);
 
 			// Create the link lines.
-			svg.selectAll(".link").data(links).enter().append("path").attr("class", "link").attr("d", elbow);
+			svg.selectAll(".link").data(links).enter().append("path").attr(
+					"class", "link").attr("d", elbow);
 			var nodes = svg.selectAll(".node").data(nodes).enter();
 
 			//First draw sibling line with blue line
-			svg.selectAll(".sibling").data(siblings).enter().append("path").attr("class", "sibling").attr("d", sblingLine);
+			svg.selectAll(".sibling").data(siblings).enter().append("path")
+					.attr("class", "sibling").attr("d", sblingLine);
 
 			// Create the node rectangles.
-			nodes.append("rect").attr("class", "node").attr("height", 20).attr("width", 40).attr("id", function(d) {return d.id;}).attr("display", function(d) {
-				if (d.hidden) {return "none"} else {return ""};}).attr("x", kx).attr("y", ky);
+			nodes.append("rect").attr("class", "node").attr("height", 20).attr(
+					"width", 40).attr("id", function(d) {
+				return d.id;
+			}).attr("display", function(d) {
+				if (d.hidden) {
+					return "none"
+				} else {
+					return ""
+				}
+				;
+			}).attr("x", kx).attr("y", ky);
 			// Create the node text label.
 			nodes.append("text").text(function(d) {
 				return d.name;
@@ -171,6 +182,7 @@
 				}).interpolate("step-after");
 				return fun(linedata);
 			}
+		});
 		</script>
 	</div>
 </body>
