--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -5,21 +5,9 @@
 
 <head>
 <link href="/css/familytree.css" rel="stylesheet">
-<script src="js/familytree.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
-<body>
-<p id="p1"></p>
-<p id="p2"></p>
-<p id="p3"></p>
-<p id="p4"></p>
-<p id="p5"></p>
-<p id="p6"></p>
-<p id="p7"></p>
-		
-<div id="graph">	
 <script type="text/javascript" th:inline="javascript">
 	/*<![CDATA[*/
 		var requestParam = /*[[${id}]]*/ null;
@@ -33,38 +21,22 @@
 		$("#p5").text(JSON.stringify(json.relationForTree));/*  テスト用出力*/
 		$("#p6").text(JSON.stringify([JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))])); /*  テスト用出力*/
 
-		var margin = {
-				top : 10,
-				right : 10,
-				bottom : 10,
-				left : 10
-			}, width = 1200, height = 600;
-			var kx = function(d) {
-				return d.x - 20;
-			};
-			var ky = function(d) {
-				return d.y - 10;
-			};
-
+			var margin = {top : 10,right : 10,bottom : 10,left : 10}, width = 1200, height = 600;	
+			var kx = function(d) {return d.x - 20;};
+			var ky = function(d) {return d.y - 10;};
 			//thie place the text x axis adjust this to center align the text
-			var tx = function(d) {
-				return d.x - 3;
-			};
+			var tx = function(d) {return d.x - 3;};
 			//thie place the text y axis adjust this to center align the text
-			var ty = function(d) {
-				return d.y + 3;
-			};
+			var ty = function(d) {return d.y + 3;};
 
 			//make an SVG
-			var svg = d3.select("#graph").append("svg").attr("width",
-					width + margin.left + margin.right).attr("height",
-					height + margin.top + margin.bottom).append("g").attr(
-					"transform",
-					"translate(" + margin.left + "," + margin.top + ")");
+			var svg = d3.select("#graph").append("svg")
+			.attr("width",width + margin.left + margin.right)
+			.attr("height",height + margin.top + margin.bottom)
+			.append("g").attr("transform","translate(" + margin.left + "," + margin.top + ")");
 
 			//My JSON note the no_parent: true this ensures that the node will not be linked to its parent
 			//hidden: true ensures that the nodes is not visible.
-
 			var root =  JSON.parse(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],10));
 			var allNodes = flatten(root);
 			
@@ -73,34 +45,34 @@
 			var siblings = [JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))];
 
 			// Compute the layout.
-			var tree = d3.layout.tree().size([ width, height ]), nodes = tree
-					.nodes(root), links = tree.links(nodes);
+			var tree = d3.layout.tree().size([ width, height ]), 
+			       nodes = tree.nodes(root), 
+			       links = tree.links(nodes);
 
-			// Create the link lines.
-			svg.selectAll(".link").data(links).enter().append("path").attr(
-					"class", "link").attr("d", elbow);
+			// Create the link lines. 縦線
+			svg.selectAll(".link").data(links).enter().append("path")
+			.attr("class", "link").attr("d", elbow);
 			var nodes = svg.selectAll(".node").data(nodes).enter();
 
-			//First draw sibling line with blue line
+			//First draw sibling line with blue line 横線
 			svg.selectAll(".sibling").data(siblings).enter().append("path")
 					.attr("class", "sibling").attr("d", sblingLine);
 
 			// Create the node rectangles.
-			nodes.append("rect").attr("class", "node").attr("height", 20).attr(
-					"width", 40).attr("id", function(d) {
-				return d.id;
-			}).attr("display", function(d) {
-				if (d.hidden) {
-					return "none"
-				} else {
-					return ""
-				}
-				;
-			}).attr("x", kx).attr("y", ky);
+			nodes.append("rect")
+				.attr("class", "node")
+				.attr("height", 20)
+				.attr("width", 40)
+				.attr("id", function(d) {return d.id;})
+				.attr("display", function(d) {
+				if (d.hidden) {return "none"} else {return ""};})
+				.attr("x", kx).attr("y", ky);
+			
 			// Create the node text label.
-			nodes.append("text").text(function(d) {
-				return d.name;
-			}).attr("x", tx).attr("y", ty);
+			nodes.append("text")
+			.text(function(d) {return d.name;})
+			.attr("x", tx)
+			.attr("y", ty);
 
 			/**
 			This defines teh line between siblings.
@@ -138,29 +110,29 @@
 				return fun(linedata);
 			}
 
-			/*To make the nodes in flat mode.
-			This gets all teh nodes in same level*/
+			/*To make the nodes in flat mode. This gets all teh nodes in same level*/
+			/* ノードを配列に詰めて返却 */
 			function flatten(root) {
 				var n = [], i = 0;
 
+				//定義
 				function recurse(node) {
 					if (node.children)
 						node.children.forEach(recurse);
-					if (!node.id)
-						node.id = ++i;
+/* 					if (!node.id)
+						node.id = ++i; */
 					n.push(node);
 				}
+				
+				//実行
 				recurse(root);
 				return n;
 			}
-			/** 
-			This draws the lines between nodes.
-			 **/
-			function elbow(d, i) {
-				if (d.target.no_parent) {
-					return "M0,0L0,0";
-				}
+			
+			/**  This draws the lines between nodes.**/
+			function elbow(d, i) {if (d.target.no_parent) {return "M0,0L0,0";}
 				var diff = d.source.y - d.target.y;
+				
 				//0.40 defines the point from where you need the line to break out change is as per your choice.
 				var ny = d.target.y + diff * 0.40;
 
@@ -175,14 +147,26 @@
 					y : d.source.y
 				} ]
 
-				var fun = d3.svg.line().x(function(d) {
-					return d.x;
-				}).y(function(d) {
-					return d.y;
-				}).interpolate("step-after");
+				var fun = d3.svg.line()
+				.x(function(d) {return d.x;})
+				.y(function(d) {return d.y;})
+				.interpolate("step-after");
 				return fun(linedata);
 			}
 		});
-		</script>
+</script>
+</head>
+
+<body>
+<p id="p1"></p>
+<p id="p2"></p>
+<p id="p3"></p>
+<p id="p4"></p>
+<p id="p5"></p>
+<p id="p6"></p>
+<p id="p7"></p>
+
+<div id="graph" style="text-align:center">	
+
 	</div>
 </body>
