--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -14,6 +14,7 @@
 		/*]]>*/	
 	
 	$.getJSON("http://localhost:8080/familytreeKoala", {id : requestParam}, function(json, textStatus, jqXHR){
+		
 		$("#p1").text(json);/*  テスト用出力*/
 		$("#p2").text(JSON.stringify(json));/*  テスト用出力*/
 		$("#p3").text(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],1));/*  テスト用出力*/
@@ -21,62 +22,67 @@
 		$("#p5").text(JSON.stringify(json.relationForTree));/*  テスト用出力*/
 		$("#p6").text(JSON.stringify([JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))])); /*  テスト用出力*/
 
-			var margin = {top : 10,right : 10,bottom : 10,left : 10}, width = 1200, height = 600;	
-			var kx = function(d) {return d.x - 20;};
-			var ky = function(d) {return d.y - 10;};
+			//オブジェクト全体の位置
+			//200 400 800 400 デフォルト値からオブジェクトが生成されるたびに引かれる数値
+			var margin = {top : 10,right : 10,bottom : 10,left : 10}, width = 1200, height = 800;	 
+			var kx = function(d) {return d.x - 40;};
+			var ky = function(d) {return d.y - 20;};  //四角
 			//thie place the text x axis adjust this to center align the text
-			var tx = function(d) {return d.x - 3;};
+			var tx = function(d) {return d.x - 0;};
 			//thie place the text y axis adjust this to center align the text
 			var ty = function(d) {return d.y + 3;};
 
-			//make an SVG
+			//make an SVG g要素を中央に寄せることができない。そもそもg要素いらないのでは。
 			var svg = d3.select("#graph").append("svg")
 			.attr("width",width + margin.left + margin.right)
 			.attr("height",height + margin.top + margin.bottom)
-			.append("g").attr("transform","translate(" + margin.left + "," + margin.top + ")");
+		/* 	.append("g").attr("transform","translate(" + margin.left + "," + margin.top + ")"); */
+
 
 			//My JSON note the no_parent: true this ensures that the node will not be linked to its parent
 			//hidden: true ensures that the nodes is not visible.
 			var root =  JSON.parse(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children"],10));
-			var allNodes = flatten(root);
+			var allNodes = flatten(root); //配列
 			
 			//This maps the siblings together mapping uses the ID using the blue line
-			/* オブジェクト間のリンク */
+			/* オブジェクト間のリンク 1つ  */
 			var siblings = [JSON.parse(JSON.stringify(json.relationForTree, ["source","target","id"], 1))];
 
-			// Compute the layout.
+			// Compute the layout. ノード取り出し、ノードを描く 5-4
 			var tree = d3.layout.tree().size([ width, height ]), 
 			       nodes = tree.nodes(root), 
 			       links = tree.links(nodes);
+			
+			// Create the link lines. 縦線 4
+			svg.selectAll(".link").data(links).enter().append("path").attr("class", "link").attr("d", elbow);
 
-			// Create the link lines. 縦線
-			svg.selectAll(".link").data(links).enter().append("path")
-			.attr("class", "link").attr("d", elbow);
-			var nodes = svg.selectAll(".node").data(nodes).enter();
-
-			//First draw sibling line with blue line 横線
-			svg.selectAll(".sibling").data(siblings).enter().append("path")
-					.attr("class", "sibling").attr("d", sblingLine);
-
-			// Create the node rectangles.
-			nodes.append("rect")
+			//First draw sibling line with blue line 横線 1つ
+			svg.selectAll(".sibling").data(siblings).enter().append("path").attr("class", "sibling").attr("d", sblingLine);
+	
+			//g要素
+			const test = svg.selectAll('.test').data(nodes).enter().append('g');
+			
+			// Create the node rectangles
+			test.append("rect")
 				.attr("class", "node")
-				.attr("height", 20)
-				.attr("width", 40)
+				.attr("height", 40)
+				.attr("width", 80)
 				.attr("id", function(d) {return d.id;})
 				.attr("display", function(d) {
 				if (d.hidden) {return "none"} else {return ""};})
 				.attr("x", kx).attr("y", ky);
 			
-			// Create the node text label.
-			nodes.append("text")
+			// Create the node text
+			test.append("text")
 			.text(function(d) {return d.name;})
 			.attr("x", tx)
-			.attr("y", ty);
+			.attr("y", ty)
+			.attr("text-anchor", "middle")
+			.attr("id", function(d) {return d.id;});
+			
 
-			/**
-			This defines teh line between siblings.
-			 **/
+			//This defines line between siblings. ノードの中にリンクの対象が存在するか
+			//allNodes配列のfilterメソッド　trueのオブジェクトのみ返す
 			function sblingLine(d, i) {
 				//start point
 				var start = allNodes.filter(function(v) {
@@ -94,7 +100,9 @@
 						return false;
 					}
 				});
-				//define teh start coordinate and end co-ordinate
+
+				//define teh start coordinate and end co-ordinate trueのオブジェクトの座標を取得
+				//200 400 800 400 デフォルト値？ 四角は
 				var linedata = [ {
 					x : start[0].x,
 					y : start[0].y
@@ -155,6 +163,9 @@
 			}
 		});
 </script>
+
+
+
 </head>
 
 <body>
