--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -53,13 +53,14 @@
 		<table class="table table-hover table-responsive">
 			<thead class="thead-dark">
 				<tr>
-					<th style="width: 32%">プロフィール画像</th>
+					<th style="width: 35%">プロフィール画像</th>
 					<th style="width: 32%">名前</th>
 					<th style="width: 27%">性別</th>
 					<th style="width: 42%">生年月日</th>
 					<th style="width: 47%">動物園</th>
 					<th style="width: 32%">母親</th>
 					<th style="width: 35%">父親</th>
+					<th style="width: 30%" colspan="1"></th>
 					<th style="width: 30%" colspan="1"></th>
 				</tr>
 			</thead>
@@ -86,6 +87,9 @@
 
 					<td><a class="btn btn-md btn-info"
 						th:href="@{/detail/{koala_id}(koala_id=*{koala_id})}">詳細情報</a></td>
+
+					<td><a class="btn btn-md btn-primary"
+						th:href="@{/familytree(id=${koala.koala_id})}">家系図</a></td>
 			</tbody>
 		</table>
 	</div>
