インデックス画面の改善、家系図機能の一部実装等のマージ。一旦動いている状態でバグも解消したので、mainにマージ、herokuへのデプロイを行う。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
 				<div class="copy">
 					<p>コアラのことがもっと好きになるデータベース</p>
 				</div>
-			<form class="searchform" action="">
+			<form class="searchform" method="post" th:action="@{/search}" th:object="${koalaSearchForm}">
             <div class="topsearch">
             <div class="container g-0">
             <div class="row g-0 topsearch_tabs">
