--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -30,7 +30,7 @@
 		<br> <br> <br> <br>
 		<h2>検索</h2>
 		<form class="card-body row no-gutters align-items-center"
-			method="post" action="#" th:action="@{/search}"
+			method="post" th:action="@{/search}"
 			th:object="${koalaSearchForm}">
 			<div class="col-auto">
 				<i class="fas fa-search h4 text-body"></i>
