--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -5,7 +5,7 @@
 
 <head>
 <link href="/css/familytree.css" rel="stylesheet">
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:inline="javascript">
