--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -30,9 +30,11 @@
 	<br>
 	<h2>コアラ情報詳細</h2>
 	<div th:object="${detail}">
-		<img th:src="@{{Path}(Path = *{profileImagePath})}"
-			th:if="*{profileImagePath}">
 		<table class="table table-hover table-responsive">
+			<tr>
+				<th class="cell_title">プロフィール写真</th>
+				<td><img th:src="*{profileImagePath}" width="200" height="200"></td>
+			</tr>
 			<tr>
 				<th class="cell_title">名前</th>
 				<td th:text="*{name}"></td>
