--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -67,11 +67,11 @@
 				<tr style="height: 85px;" th:each="koala : ${koalaList}"
 					th:object="${koala}">
 					<td><img th:src="@{{Path}(Path = *{profileImagePath})}"
-						th:if="*{profileImagePath}" width="100" height="100"></td>
+						th:if="*{profileImagePath}" width="85" height="85"></td>
 					<td width="20" th:text="*{name}"></td>
 					<td th:if="*{sex == 0}">不明</td>
-					<td th:if="*{sex == 1}">男</td>
-					<td th:if="*{sex == 2}">女</td>
+					<td th:if="*{sex == 1}"><img th:src="@{../images/male.png}" width="20" height="20"></td>
+					<td th:if="*{sex == 2}"><img th:src="@{../images/female.png}" width="20" height="20"></td>
 					<td th:if="*{sex == 9}"></td>
 					<td th:if="*{stringBirthDate.equals('9999年1月1日')}">不明</td>
 					<td th:unless="*{stringBirthDate.equals('9999年1月1日')}"
