--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -31,9 +31,9 @@
 				</div>
 				<div sec:authorize="isAuthenticated()" class="d-flex flex-row">
 					<a th:href="@{/user/mypage/{id}(id = ${#authentication.principal.user_id})}">
-						<img th:if="${#strings.isEmpty(#authentication.principal.user_id)}" 
+						<img th:unless="${#authentication.principal.profileImagePath == null}" 
 						th:src="${#authentication.principal.profileImagePath}" height="40" alt="マイページ">
-						<img th:unless="${#strings.isEmpty(#authentication.principal.user_id)}" 
+						<img th:if="${#authentication.principal.profileImagePath == null}" 
 						th:src="@{/images/user/profile/defaultUser.png}" height="40" alt="マイページ">
 					</a>
 					<form method="post" th:action="@{/logout}">
