--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -20,28 +20,33 @@
 					<li class="nav-item active"><a class="nav-link"
 						aria-current="page" href="#">コアラの記録</a></li>
 					<li class="nav-item"><a class="nav-link" href="/insert">新しいコアラの登録</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://tayori.com/form/e976498f95636ad99bb9b6dbe901499a642cd107">お問い合わせ</a></li>
 				</ul>
-
-				<div sec:authorize="!isAuthenticated()" class="d-flex flex-row">
-					<a th:href="@{/signup}">
-						<button class="btn btn-md btn-success mx-2" type="submit">アカウント登録</button>
-					</a> <a th:href="@{/login}">
-						<button class="btn btn-outline-success mx-2" type="submit">ログイン</button>
-					</a>
-				</div>
-				<div sec:authorize="isAuthenticated()" class="d-flex flex-row">
-					<a th:href="@{/user/mypage/{id}(id = ${#authentication.principal.user_id})}">
-						<img th:unless="${#authentication.principal.profileImagePath == null}" 
-						th:src="${#authentication.principal.profileImagePath}" height="40" alt="マイページ">
-						<img th:if="${#authentication.principal.profileImagePath == null}" 
-						th:src="@{/images/user/profile/defaultUser.png}" height="40" alt="マイページ">
-					</a>
-					<form method="post" th:action="@{/logout}">
-						<button class="btn btn-md btn-success mx-2" type="submit">ログアウト</button>
-					</form>
+						
+					<div sec:authorize="!isAuthenticated()" class="d-flex flex-row">
+						<a th:href="@{/signup}">
+							<button class="btn btn-md btn-success mx-2" type="submit">アカウント登録</button>
+						</a> <a th:href="@{/login}">
+							<button class="btn btn-outline-success mx-2" type="submit">ログイン</button>
+						</a>
+					</div>
+					<div sec:authorize="isAuthenticated()" class="d-flex flex-row">
+						<a
+							th:href="@{/user/mypage/{id}(id = ${#authentication.principal.user_id})}">
+							<img
+							th:unless="${#authentication.principal.profileImagePath == null}"
+							th:src="${#authentication.principal.profileImagePath}"
+							height="40" alt="マイページ"> <img
+							th:if="${#authentication.principal.profileImagePath == null}"
+							th:src="@{/images/user/profile/defaultUser.png}" height="40"
+							alt="マイページ">
+						</a>
+						<form method="post" th:action="@{/logout}">
+							<button class="btn btn-md btn-success mx-2" type="submit">ログアウト</button>
+						</form>
+					</div>
 				</div>
 			</div>
-		</div>
 	</nav>
 </header>
 
