--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -13,7 +13,7 @@
 		var requestParam = /*[[${id}]]*/ null;
 		/*]]>*/	
 	
-	$.getJSON("/familytreeKoala", {id : requestParam}, function(json, textStatus, jqXHR){
+	$.getJSON("/familytreeAnimal", {id : requestParam}, function(json, textStatus, jqXHR){
 		
 		//オブジェクト全体の位置
 			//200 400 800 400 デフォルト値からオブジェクトが生成されるたびに引かれる数値
@@ -39,7 +39,7 @@
 
 			//My JSON note the no_parent: true this ensures that the node will not be linked to its parent
 			//hidden: true ensures that the nodes is not visible.
-			var root =  JSON.parse(JSON.stringify(json.koalaForTree, ["name", "id", "hidden", "no_parent", "children","profileImagePath","sex"],10));
+			var root =  JSON.parse(JSON.stringify(json.animalForTree, ["name", "id", "hidden", "no_parent", "children","profileImagePath","sex"],10));
 			var allNodes = flatten(root); //sbilinglineメソッド専用の配列を用意
 			
 			//This maps the siblings together mapping uses the ID using the blue line
