--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
 				<div class="copy">
 					<p>コアラのことがもっと好きになるデータベース</p>
 				</div>
-			<form class="searchform" method="get" th:action="@{/search}" th:object="${koalaSearchForm}">
+			<form class="searchform" method="get" th:action="@{/search}" th:object="${animalSearchForm}">
             <div class="topsearch">
             <div class="container g-0">
             <div class="row g-0 topsearch_tabs">
